--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   flutter_bloc: ^8.1.4
   shared_preferences: ^2.2.2
   jwt_decoder: ^2.0.1
+  dio: ^5.4.1
 
 dev_dependencies:
   flutter_test:
